@@ -1,6 +1,6 @@
 /*
  * Export CLISP internals for modules
- * Bruno Haible 1994-2005, 2009, 2017, 2024
+ * Bruno Haible 1994-2005, 2009, 2017, 2024-2025
  * Sam Steingold 1998-2011, 2016-2017
  */
 
@@ -333,7 +333,7 @@ int main(int argc, char* argv[])
   if (test_f == NULL) { perror(argv[2]); exit(1); }
 
   fprintf(stdout, "writing test file %s\n", argv[2]);
-  fprintf(test_f, "/* generated by %s on %s %s */\n"
+  fprintf(test_f, "/* generated by %s */\n"
                   "#if USE_CLISP_H\n"
                   "#include \"clisp.h\"\n"
                   "#else\n"
@@ -342,7 +342,7 @@ int main(int argc, char* argv[])
                   "#include <stdio.h>\n"
                   "\n"
                   "int main () {\n",
-                  __FILE__,__DATE__,__TIME__);
+                  __FILE__);
 
  #if DYNAMIC_TABLES
   if (argc >= 4) {           /* open the DLL export file and start it */
